--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 *.tsv.gz
 *.xlsx
 # Exceptions
-!devcontainer.json
+!.devcontainer.json
 
 # Backup
 *.bak
@@ -89,12 +89,7 @@ Temporary Items
 ## VSCode
 
 # Visual Studio Code Configuration
-.vscode/*git 
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
+.vscode
 
 # Local History for Visual Studio Code
 .history/
