Added Issue and PR Templates, aligning documentation and other files allong the way

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,5 +1,4 @@
-# Dependabot provides automated dependency updates. 
-# This file describes the dependencies eccosystems to update.
+# This file defines Dependabot automated dependency updates 
 
 version: 2
 updates:
